Proyecto manager reorganizado con fases, miembros y roles. Falta Asignar Roles Usuarios

--- a/my/templates/proyectoManagerMiembroFase.html
+++ b/my/templates/proyectoManagerMiembroFase.html
@@ -9,423 +9,8 @@
 <script type="text/javascript">
 jQuery(document).ready(
 function() {
-	 
-	
-	$("#dialogo-rolProyecto")
-	.dialog(
-			{
-				autoOpen : false,
-				modal : true,
-				overflow : scroll,
-				resizable : false,
-				
-				width : 'auto',
-				
-				show : {
-					effect : 'fade',
-					duration : 400
-				},
-				hide : {
-					effect : 'fade',
-					duration : 350
-				},
-				buttons : {
-					/* funcion asociado al boton aceptar */
-					"Aceptar" : function() {
-						/* si el dato es nuevo se llamar a la url para agregar */
-						if (banderaRol == 1) {
-							/* se indica la URL */
-							if (controlRol(true) == 1) {
-								mostrarMensaje("Error",
-										"Campos completados incorrectamente");
-							} else {
-								$.post('/agregarRolProyecto/',{
-												/* se indican los parametros*/
-												nombre : $(
-														"#nombreRol")
-														.val(),
-												idFase : $(
-												"#comboFase").val(),		
-												descripcion : $("#descripcionRol").val(), 
-												idRol: "0"
-												},
-												function(data, status) {
-													/* funcion que maneja el resulado de la invocación */
-
-													/* si hay error se muestra el mensaje*/
-													if (data.substring(
-															0, 1) == 't') {
-														mostrarMensaje(
-																"Error",
-																"Los datos no se han podido guardar:\n"
-																		+ data
-																				.substring(2));
-														/* se indica que no hubieron errores */
-													} else {
-														$(
-																"#dialogo-rolProyecto")
-																.dialog(
-																		"close");
-														mostrarMensaje(
-																"Exito",
-																data
-																		.substring(2));
-													}
-													/* se indicar la recarga de la tabla */
-													$('#listRoles')
-															.trigger(
-																	"reloadGrid");
-												});
-							}
-
-							/* si el dato se modifica se llama a la url para modificar*/
-						} else if (banderaRol == 2) {
-							if (controlRol(false) == 1) {
-								mostrarMensaje("Error",
-										"Campos completados incorrectamente");
-							} else {
-
-								/* se indica la url */
-								$
-										.post(
-												'/modificarRolProyecto/',
-												{
-													idRol: $("#idRol").val(),
-													nombre : $("#nombreRol").val(),
-													descripcion : $("#descripcionRol").val()
-												},
-												function(data, status) {
-
-													if (data.substring(
-															0, 1) == 't') {
-														mostrarMensaje(
-																"Error",
-																"Los datos no se han podido modificar:\n"
-																		+ data
-																				.substring(2));
-													} else {
-														$(
-																"#dialogo-rolProyecto")
-																.dialog(
-																		"close");
-														mostrarMensaje(
-																"Exito",
-																"Los datos han sido modificados");
-													}
-													$('#listRoles')
-															.trigger(
-																	"reloadGrid");
-												});
-							}
-						} else if (banderaRol == 3) {
-							$(this).dialog("close");
-						}
-					},
-					"Cancelar" : function() {
-						$(this).dialog("close");
-					}
-				}
-			});
 
 	
-	
-	
-	
-	var gridPermisos = jQuery("#listPermisos").jqGrid(
-			{
-				
-				// datatype : "local",
-				// data:mydata,
-				url : 'http://localhost:5000/listarPermisosRol',
-				datatype : "json",
-				width : 'auto',
-				mtype : "get",
-				postData : {
-					idRol : '0'
-				},
-				show : {
-					effect : 'fade',
-					duration : 400
-				},
-				hide : {
-					effect : 'fade',
-					duration : 350
-				},
-				colNames : [ 'idPermiso','Nombre ', 'Descripcion', 'Asignado a Rol'],
-				colModel : [ {
-					name : 'idPermiso',
-					index : 'idPermiso',
-					
-					hidden : true
-				}, {
-					name : 'nombre',
-					index : 'nombre',
-					
-				}, {
-					name : 'descripcion',
-					index : 'descripcion',
-					width : '260%',
-				}, {
-					name : 'enRol',
-					index : 'enRol',
-					align : "center",
-					
-					formatter : 'select',
-					stype : 'select',
-					
-					editoptions : {
-						value : "Todos:Todos;Si:Si;No:No"
-					},
-				}],
-				sortname : 'nombre',
-				viewrecords : true,
-				rownumbers : true,
-				sortorder : "desc",
-				ignoreCase : true,
-				pager : '#pagerPermisos',
-				caption : "Lista de Permisos",
-				jsonReader : {
-					root : "invdata",
-					page : "currpage",
-					total : "totalpages",
-					records : "totalrecords",
-					repeatitems : false,
-					id : "idPermiso"
-				}
-
-			}).jqGrid('navGrid', '#pagerPermisos', {
-		edit : false,
-		add : false,
-		del : false,
-		search : false,
-		refresh : false
-	});
-	gridPermisos.jqGrid('filterToolbar', {
-		stringResult : true,
-		searchOnEnter : false,
-		defaultSearch : "cn"
-	});
-
-	
-	$('#dialogo-permisos')
-	.dialog(
-			{
-				autoOpen : false,
-				modal : true,
-				resizable : true,
-				width : 'auto',
-				show : {
-					effect : 'fade',
-					duration : 400
-				},
-				hide : {
-					effect : 'fade',
-					duration : 350
-				},
-				buttons : {
-					/* funcion asociado al boton aceptar */
-					"Agregar" : function() {
-						/* se pregunta si es que se selecciono la fila en proyectos, y en lel grid de users */
-						var rowPermisos = $('#listPermisos').jqGrid(
-								'getGridParam', 'selrow');
-						var rowRol = $('#listRoles').jqGrid(
-								'getGridParam', 'selrow');
-						
-						if (rowPermisos == null) {
-							mostrarMensaje("Atencion",
-									"Seleccione el Usuario a agregar");
-							return;
-						}
-						if (rowRol == null) {
-							mostrarMensaje("Atencion",
-									"Seleccione el Rol");
-							return;
-						}
-
-						var rowdata = $('#listRoles')
-								.getRowData(rowRol);
-						
-						var rowdataPermisos = $('#listPermisos')
-								.getRowData(rowPermisos);
-						/* se indica la URL */
-						
-						$.post('/agregarPermisoRol/',
-										{ /* se indican los parametros*/
-											idRol : rowdata.idRol,
-											idPermiso : rowdataPermisos.idPermiso
-
-										},
-										function(data, status) {
-											/* funcion que maneja el resultruc : $("#ruc").val(),ado de la invocación */
-
-											/* si hay error se muestra el mensaje*/
-											if (data.substring(0, 1) == 't') {
-												mostrarMensaje(
-														"Error",
-														"Los datos no se han podido guardar:\n"
-																+ data
-																		.substring(2));
-												/* se indica que no hubieron errores */
-											} else {
-												mostrarMensaje(
-														"Exito",
-														data
-																.substring(2));
-											}
-											/* se indicar la recarga de la tabla */
-											$('#listPermisos').trigger(
-													"reloadGrid");
-										});
-					},
-					"Quitar" : function() {
-						var rowPermisos = $('#listPermisos').jqGrid(
-								'getGridParam', 'selrow');
-						if (rowPermisos == null) {
-							mostrarMensaje("Atencion",
-									"Seleccione el Permiso a eliminar");
-							return;
-						}
-						var rowRol = $('#listRoles').jqGrid(
-								'getGridParam', 'selrow');
-						if (rowRol == null) {
-							mostrarMensaje("Atencion",
-									"Seleccione el Rol");
-							return;
-						}
-
-						var rowdata = $('#listRoles')
-								.getRowData(rowRol);
-						var rowdataPermisos = $('#listPermisos')
-								.getRowData(rowPermisos);
-						/* se indica la url */
-						$.post('/quitarPermisoRol/',
-										{
-											idRol : rowdata.idRol,
-											idPermiso : rowdataPermisos.idPermiso
-										},
-										function(data, status) {
-
-											if (data.substring(0, 1) == 't') {
-												mostrarMensaje(
-														"Error",
-														"Permiso no se ha podido quitar:\n"
-																+ data
-																		.substring(2));
-											} else {
-												mostrarMensaje("Exito",
-														"Permiso ha sido quitado del Rol");
-											}
-											$('#listPermisos').trigger(
-													"reloadGrid");
-										});
-					},
-					"Salir" : function() {
-						$(this).dialog("close");
-					}
-				}
-			});
-
-	
-	
-	
-	var grid = jQuery("#listRoles").jqGrid(
-			{
-
-				// datatype : "local",
-				// data:mydata,
-				url : 'http://localhost:5000/listarRolProyecto',
-				datatype : "json",
-				mtype : "get",
-				postData: { idFase : comboFaseSeleccion()},
-				show : {
-					effect : 'fade',
-					duration : 200
-				},
-				
-				hide : {
-					effect : 'fade',
-					duration : 200
-				},
-				colNames : [ 'ID rol ', 'Nombre',
-						'Descripcion', 'listaPermisos' ],
-				colModel : [ {
-					name : 'idRol',
-					index : 'idRol',
-					hidden : true
-				}, {
-					name : 'nombre',
-					index : 'nombre',
-				}, {
-					name : 'descripcion',
-					index : 'descripcion',
-
-				}							
-				, {
-					name : 'listaPermisos',
-					index : 'listaPermisos',
-					hidden : true
-				}
-
-				],
-				sortname : 'nombre',
-				viewrecords : true,
-				rownumbers : true,
-				sortorder : "desc",
-				ignoreCase : true,
-				pager : '#pagerRoles',
-				caption : "Lista de Roles",
-				jsonReader : {
-					root : "invdata",
-					page : "currpage",
-					total : "totalpages",
-					records : "totalrecords",
-					repeatitems : false,
-					id : "idUsuario"
-				}
-
-			}).jqGrid('navGrid', '#pagerRoles', {
-		edit : false,
-		add : false,
-		del : false,
-		search : false,
-		refresh : true
-	});
-	grid.jqGrid('filterToolbar', {
-		stringResult : true,
-		searchOnEnter : false,
-		defaultSearch : "cn"
-	});
-
-	
-	
-	$('#comboFase');
-	
-	$("#dialogo-roles")
-	.dialog(
-			{
-				autoOpen : false,
-				width : 'auto',
-				height : '500',
-				overflow : scroll,
-				modal : true,
-				show : {
-					effect : 'fade',
-					duration : 400
-				},
-				hide : {
-					effect : 'fade',
-					duration : 350
-				},
-				resizable : false,
-				buttons : {
-					/* funcion asociado al boton aceptar */
-					"Nuevo" : function(){agregarRol()},
-					"Modificar" : function(){modificarRol()},
-					"Consultar" : function(){consultarRol()},
-					"Administrar Permisos" : function(){abrirDialogoPermisos()},
-				}
-	});
-		
 	var gridFase = jQuery("#listaFases")
 	.jqGrid(
 			{
@@ -1431,190 +1016,6 @@ $('#dialogo-agregar-miembros')
 {% endblock %} {% block body %}
 
 <script>
-
-var banderaRol;
-	function abrirDialogoPermisos() {
-	
-		var rowRol = $('#listRoles').jqGrid('getGridParam', 'selrow');
-		if (rowRol == null) {
-			mostrarMensaje("Atencion",
-					"Seleccione el Rol a cual administrar permisos ");
-			return;
-		}
-		var rowdata = $('#listRoles').getRowData(rowRol);
-		
-		$('#listPermisos').jqGrid("getGridParam", "postData").idRol=rowdata.idRol;
-		$('#listPermisos').trigger("reloadGrid");
-		$('#dialogo-permisos').dialog("open");
-	}
-
-	/*lo necesario para el dialogo de roles*/
-	function cargarFormRol(rowdata, row) {
-		rowdata = $('#listRoles').getRowData(row);
-		$("#idRol").val(rowdata.idRol);
-		$("#nombreRol").val(rowdata.nombre);
-		$("#descripcionRol").val(rowdata.descripcion);
-		}
-
-	function setCamposDisabledRol(habilitar) {
-		$("#nombreRol").attr('disabled', habilitar);
-		$("#descripcionRol").attr('disabled', habilitar);
-	}
-
-	function setBordeNormalRol() {
-		$("#nombreRol").css('border-color', 'skyblue');
-		$("#descripcionRol").css('border-color', 'skyblue');
-	}
-	
-	function setCampoErroresRol(){
-		$("#EnombreRol").val("");
-		$("#EdescripcionRol").val("");
-	}
-	
-	function controlRol(esNuevo) {
-		setCampoErroresRol();
-		setBordeNormalRol();
-		var error = 0;
-		var len;
-
-		len = $("#nombreRol").val().trim().length;
-		if (len > 20 || len <= 0) {
-			$("#nombreRol").css('border-color', 'red');
-			$("#EnombreRol").val("Campo Obligario. Long. max 20").css('color', 'red');	
-			error = 1;
-		}
-
-
-		len = $("#descripcionRol").val().trim().length;
-		if (len > 50 || len <= 0) {
-			$("#descripcionRol").css('border-color', 'red');
-			$("#EdescripcionRol").val("Campo Obligario. Long. max 50").css('color', 'red');	
-			error = 1;
-		}		return error;
-	}
-	
-	/* funcion para llamar al formulario agregar un nuevo datos */
-	function agregarRol() {
-		setBordeNormalRol();
-		setCampoErroresRol();
-		banderaRol = 1;
-
-		/* se vacian los elementos HTML de captura de datos */
-		$("#idRol").val("");
-		$("#nombreRol").val("");
-		$("#descripcionRol").val("");
-		
-		/* se llama al dialogo de captura de datos */
-		setCamposDisabledRol(false);
-		if($("#comboFase").val()==0){
-			mostrarMensaje("Error", "Se debe seleccionar fase para agregar nuevo Rol")
-		}else{
-			$("#dialogo-rolProyecto").dialog("open");
-		}
-	}
-	
-
-	/* funcion para llamar al formulario para la modificación de datos */
-	function modificarRol() {
-
-		setBordeNormalRol();
-		setCampoErroresRol();
-		/* se indica que el dato no es nuevo */
-		banderaRol = 2;
-		/* se comprueba que hay un dato seleccionado para modificar */
-		var row = $('#listRoles').jqGrid('getGridParam', 'selrow');
-		if (row == null) {
-			mostrarMensaje("Atencion", "Seleccione la fila a modificar");
-			return;
-		}
-		var rowdata;
-		/* se cargan los elementos HTML segun la fila seleccionada*/
-		cargarFormRol(rowdata, row);
-		/*se habilita la edicion*/
-		setCamposDisabledRol(false);
-		
-		$("#dialogo-rolProyecto").dialog("open");
-
-	}
-
-	function consultarRol() {
-		setBordeNormalRol();
-		setCampoErroresRol();
-
-		//$('#idEstado').detach().attr('type', 'text').attr('disabled',true).insertAfter('#activo').val($('#activo').val());
-		//cambia el comboBox por un campo disabled del estado 
-		//$('#activo').hide();
-		/* se indica que el dato no es nuevo */
-		banderaRol = 3;
-		/* se comprueba que hay un dato seleccionado para consultar */
-		var row = $('#listRoles').jqGrid('getGridParam', 'selrow');
-		if (row == null) {
-			mostrarMensaje("Atencion", "Seleccione la fila a consultar");
-			return;
-		}
-		var rowdata;
-		/* se cargan los elementos HTML segun la fila seleccionada*/
-		cargarFormRol(rowdata, row);
-		/*se inhabilita la edicion*/
-		rowdata = $('#listRoles').getRowData(row);
-		setCamposDisabledRol(true);
-		/* se llama al dialogo para modificar los datos */
-		$("#dialogo-rolProyecto").dialog("open");
-	}
-
-	
-	/*se carga el combo de Fases*/
-	function cargaComboFase(){
-		
-		$.post('/listarComboFases/',
-				{ /* se indican los parametros*/
-					idProyecto : valorProyectoSeleccion()
-				},
-				function(data, status) {
-					var select = $('#comboFase');
-					var options = select.prop('options');
-					
-					$('option', select).remove();
-					options[0] = new Option("--Seleccione una Fase--","0");
-					var index=0
-					
-					data = $.parseJSON( data );
-					//var jsonData = JSON.stringify(eval("(" + data + ")"));
-					$.each(data, function(index,fase) {
-						index=index+1;
-						options[options.length] = new Option(index+" : "+fase.nombreFase,fase.idFase);
-					})
-				}
-			);
-		$('#dialogo-roles').dialog("open");
-	}
-	
-	function comboFaseSeleccion()
-	{
-		return $('#comboFase').val()
-		
-	}
-	
-	function reloadGridRol(){
-		
-		$("#comboFase option[value='0']").remove();
-		var myPostData = $('#listRoles').jqGrid("getGridParam", "postData");
-		delete myPostData.idFase;
-		//eso borra el idFase actual
-		$('#listRoles').setGridParam({
-		postData: { idFase: comboFaseSeleccion() } });
-		//eso se setea el nuevo valor
-		$('#listRoles').trigger("reloadGrid");
-	
-		
-	}
-	
-	
-	
-
-
-
-
 	/* variable permite indicar si se está cargando un nuevo item de datos */
 	var banderita;
 	var yaentro;
@@ -2055,72 +1456,15 @@ var banderaRol;
 		value="Agregar Miembros" onclick='abrirDialogoMiembros()' />
 		<input
 		id="btFases" type="button" name="btFases"
-		value="Administrar Fases" onclick='abrirDialogoFases()' />
-		<input
-		id="btRoles" type="button" name="btRoles"
-		value="Administrar Roles" onclick='cargaComboFase()' /> <br></br>
+		value="Administrar Fases" onclick='abrirDialogoFases()' /> <br></br>
 	<script>
 		$("#btAgregar").button();
 		$("#btModificar").button();
 		$("#btConsultar").button();
 		$("#btAgregarMiembros").button();
 		$("#btFases").button();
-		$("#btRoles").button();
 	</script>
 </div>
-
-<div id="dialogo-roles">
-
-<label for="comboFase" style="display: block ; padding: 0.4em; float:left ">Fase a administrar</label> 
-<select id="comboFase" onchange="reloadGridRol()"
-style="display: block; margin-bottom: 12px; padding: 0.4em;"
-class="ui-widget-content ui-corner-all">
-</select>
-<table id="listRoles"></table>
-<div id="pagerRoles"></div>
-</div>
-
-
-
-<div id="dialogo-rolProyecto" title="Roles de proyecto">
-	<form title="(*) campos obligatorios">
-		<fieldset class="fieldset">
-
-			<input type="hidden" name="idRol" id="idRol" />
-			<table id="table1c" style="float: left; padding: 0.4em;">
-				<tr>
-					<td><label for="nombreRol" style="display: block">*Nombre del Rol</label>
-						<input title="20 caracteres max" type="text" name="nombreRol"
-						id="nombreRol"
-						style="width: 200px; display: block; margin-bottom: 12px; padding: 0.4em;" />
-					</td>
-					<td><br></br> <input title="20 caracteres max" readonly
-						tabIndex="-1" type="text" name="EnombreRol"
-						id="EnombreRol"
-						style="width: 200px; border: none; display: block; margin-bottom: 12px; padding: 0.4em;" />
-					</td>
-				</tr>
-				<tr>
-					<td><label for="descripcionRol" style="display: block">*Descripcion</label>
-						<textarea type="text" name="descripcionRol" id="descripcionRol"
-						style="width: 200px; display: block; margin-bottom: 12px; padding: 0.4em;"> </textarea></td>
-					<td><br></br> <input title="20 caracteres max" readonly
-						tabIndex="-1" type="text" name="EdescripcionRol"
-						id="EdescripcionRol"
-						style="width: 200px; border: none; display: block; margin-bottom: 12px; padding: 0.4em;" />
-					</td>
-				</tr>
-				
-			</table>
-		</fieldset>
-		
-	</form>
-</div>
-<div id="dialogo-permisos">
-<table id="listPermisos"></table>
-<div id="pagerPermisos"></div>
-</div>
-
 
 {% endblock %}
 </html>
