--- a/my/templates/index.html
+++ b/my/templates/index.html
@@ -87,9 +87,10 @@
 																mostrarMensaje("Error",
 																		"Usuario"+ data.substring(2));
 																/* se indica que no hubieron errores */
-													}else
+													}else{
+														
 														$('#login').submit();
-													
+													}
 												}
 												);
 							}
