--- a/my/templates/base.html
+++ b/my/templates/base.html
@@ -29,7 +29,7 @@
 	<iframe width="50px"style="border-style:none"> </iframe>
 	</div>
 	<div id="header" style=" background-color:#FFFFFF " >
-			<h6 style="float:right; background-color:#FFFFFF ;text-indent: 4;" >
+			<h4 style="float:right; background-color:#FFFFFF ;text-indent: 4;" >
 			
 			Bienvenido:{{session['username']}}!   
 			<br></br>
@@ -41,16 +41,17 @@
 		     <script>
 					$("#btLogOut").button();
 		    </script>
-			 </h6>
+			 </h4>
 			 <div  style="float:left; background-color:#FFFFFF; ">
 			<iframe width="50px"style="border-style:none"> </iframe>
 			</div>
-			<img src="/static/images/blue-23957_640.png" width="200px"/>
+			<img src="/static/images/blue-23957_640.png" width="150px" title="Volver a Pagina Principal" onclick="location.href='/'" style="cursor:pointer"/>
 			<h6>Web Aplication Project Manager</h6>
 			
 			
 	</div>
-	<HR style="color:#659EC7 ;width: 100%; margin: 0; padding: 0;"></hr>
+	<div id="footer" style="clear:both;text-align:center; background-color: #659EC7"/> WAPM. Version 1.0.1</div>
+	<!--  <HR style="color:#659EC7 ;width: 100%; margin: 0; padding: 0;"></hr> -->
 	
 	<div id="content" background-color:#FFFFFF; ">
 	{% block body %}{% endblock %}</div>
