--- a/my/templates/main.html
+++ b/my/templates/main.html
@@ -4,17 +4,19 @@
 {% endblock %} 
 {% block body %}
 
-<div id="perfiles" title="Seleccionar perfil para ingresar" style="margin-left:auto;margin-right:auto; width:450px">
-<h4>Seleccione un modulo del sistema </h4>
+<div id="perfiles" title="Seleccionar perfil para ingresar" style="margin-left:auto;
+margin-right:auto;
+">
+<h2>Seleccione un modulo del sistema </h2>
 {% if 'rolAdmin' in session %}	
- <input id="btAdmin" type="button" style="width:90%" value="Administracion de Usuarios" onclick="location.href='/usuarioManager/'"></input>
+ <input id="btAdmin" type="button"  value="Administracion de Usuarios" onclick="location.href='/usuarioManager/'"></input>
  {% endif %}
  <br></br>
  {% if 'rolPL' in session %}
- <input id="btPL" type="button" style="width:90%" value="Administracion de Proyectos" onclick="location.href='/proyectoManager/'"></input>
+ <input id="btPL" type="button"  value="Administracion de Proyectos" onclick="location.href='/proyectoManager/'"></input>
  {% endif %}
  <br></br>
- <input id="btMiembro" type="button" style="width:90%" value="Desarrollo y Gestion de Cambio" onclick="location.href='/miembros/'"></input>
+ <input id="btMiembro" type="button" value="Desarrollo y Gestion de Cambio" onclick="location.href='/miembros/'"></input>
  <br></br>
 </div>
 
