--- a/my/templates/baseBackup.html
+++ b/my/templates/baseBackup.html
@@ -25,20 +25,11 @@
 </header>
 <body>
 
-			 
-	
-	
-	<div style="position:fixed;left:220px">
-			
-			<img src="/static/images/blue-23957_640.png" width="150px" title="Volver a Pagina Principal" onclick="location.href='/'" 
-			style="cursor:pointer; position:fixed;left:90"/>
-			<br></br>
-			<br></br>
-			<h6 style="position:fixed;"> Web Aplication Project Manager</h6>
-			
+	<div  style="float:right; background-color:#FFFFFF; ">
+	<iframe width="200px" height="auto" style="border-style:none;"> </iframe>
 	</div>
-	<div  style="position:fixed;right:220px">
-		<h4 style="float:right; background-color:#FFFFFF ;text-indent: 4;" >
+	<div id="header" style=" background-color:#FFFFFF " >
+			<h4 style="float:right; background-color:#FFFFFF ;text-indent: 4;" >
 			
 			Bienvenido:{{session['username']}}!   
 			<br></br>
@@ -51,31 +42,28 @@
 					$("#btLogOut").button();
 		    </script>
 			 </h4>
-	</div>
+			 <div  style="float:left; background-color:#FFFFFF; ">
+			<iframe width="200px" height="auto" style="border-style:none;"> </iframe>
+			</div>
+			<img src="/static/images/blue-23957_640.png" width="150px" title="Volver a Pagina Principal" onclick="location.href='/'" style="cursor:pointer"/>
+			<h6>Web Aplication Project Manager</h6>
 			
 			
-	
-	<div id="barraHeader" style="clear:both;width:75%;text-align:center; 
-	top:160px;left:200px;position:fixed;	 background-color: #659EC7;"> WAPM. Version 1.0.1
 	</div>
+	<div id="barraHeader" style="clear:both;width:75%;text-align:center; margin-left:auto;margin-right:auto; background-color: #659EC7;"/> WAPM. Version 1.0.1</div>
+	<!--  <HR style="color:#659EC7 ;width: 100%; margin: 0; padding: 0;"></hr> -->
 	
-	 <div id="content" style="top:180px;position:fixed;left:250px;bottom:120px;overflow:auto;">
-	{% block body %}{% endblock %}
-	</div>
-	<div
-	style="float:left; background-color:#E6E6E6; height: 900px;position:fixed;top:0;left:0 ">
-	<iframe width="200px" height="auto" style="border-style:none;"> </iframe>
+	<div id="content" background-color:#FFFFFF; ">
+	{% block body %}{% endblock %}</div>
 	
-	</div>
-	
-	 <div  style="float:right; background-color:#E6E6E6;position:fixed;top:0;height:900px;right:0 ">
-			<iframe width="200px" height="100%" style="border-style:none;"> </iframe>
-	</div> 
-	<div id="barraFooter" style="clear:both;text-align:center; background-color: #0B3861;height: 70px;width:100%;
-	  position: fixed; bottom: 0 ;left:0;right:0">
+	<div id="barraFooter" style="clear:both;text-align:center; background-color: #0B3861;height: 100px;width:100%;  position: fixed; bottom: 0 ;">
 	Copyright © WAPM <br></br> Desarrollado por: PRASS    email: prass@software.prass.py
+	<br></br>
+	Telefono: 0971-990666 0981-990666
+	</div>
 	
 	</div>
+	
 
 </body>
 </html>
